# fand

./: .gitignore  DNS-323.md  Makefile.am  README.md  configure.ac  fan.c  fan.h  fand.c  layout.c  layout.h  memory.c  memory.h  sensor.c  sensor.h  util.c  util.h
